{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "TwobControls",
            "id": "5ddc1293-11ad-4d41-99f0-778ead1b2f84",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "0fc8aba7-d918-40b5-b057-89aea4b701c4",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "af6a55fd-bc8d-469b-9290-81f3b619d968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e804b9df-1d81-4ef8-b596-039f1033cfe3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(max=1)",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c558d4c1-ceb9-475d-be25-3e775fb29178",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NinesControls",
            "id": "ff012881-6a79-477e-bdcf-35fd56e9d713",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "fe44fe4b-850d-41f1-b24f-5a60cdb154f1",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "1c933105-164e-4697-87a8-0cf788e2b51a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4d6c953-eb3a-441a-b958-f6a113896ceb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25a65b11-24a9-4719-8950-7f6d087d0541",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuControls",
            "id": "44ffcf47-b1fe-4505-aa4a-4508cf1ffc8c",
            "actions": [
                {
                    "name": "ResetLevel",
                    "type": "Button",
                    "id": "695ae4eb-1e5d-49c1-aa96-449635333189",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e7bde10-6402-4528-a37c-263a18574b77",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}